syntax = "proto3";

package kyc;

service KYC {
  rpc findKyc(KycRequest) returns (KycResponse) {}
}

message KycRequest {
  string query = 1;
  string projection = 2;
}

message KycResponse { string data = 1; }
